added education section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#whatIdo">What I do <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="#projects">Projects</a>
+            <a class="nav-item nav-link active" href="#education">Education</a>
             <a class="nav-item nav-link active" href="#contactform">Contact</a>
             <a class="nav-item nav-link active" href="assets/resumes/resume.pdf" name="sri-charan-resume">CV</a>
           </div>
@@ -45,9 +46,9 @@
         </p>
         <div class="ml-2 pt-3">
           <i class="fa-brands fa-linkedin fa-2xl ml-2 mr-2" style="border-radius: 10px;"></i>
-            <a href="http://linkedin.com/in/sri-charan-bodduna"><span>LinkedIn</span></a>
+          <a href="http://linkedin.com/in/sri-charan-bodduna"><span>LinkedIn</span></a>
           <i class="fa-brands fa-github fa-2xl ml-2 mr-2" style="border-radius: 10px;"></i>
-            <a href="http://github.com/sricharan245"><span>GitHub</span></a>
+          <a href="http://github.com/sricharan245"><span>GitHub</span></a>
           <i class="fa fa-envelope fa-2xl ml-2 mr-2" style="border-radius: 10px;"></i>
           <a href="mailto:sricharan0246@gmail.com">sricharan0246@gmail.com</a>
         </div>
@@ -109,6 +110,58 @@
       </div>
 
       <hr>
+      <div id="education" class="m-2">
+        <div class="h2 heading">Education</div>
+        <div class="row">
+          <div class="col-lg-2 d-flex justify-content-center">
+            <img src="assets/images/unt_logo.png" width="100px" height="100px">
+          </div>
+          <div class="col-lg-10">
+            <div class="row education-row">
+              <div class="col-lg-8">
+                <div class="h3 project-title d-flex justify-content-left">University of North Texas</div>
+              </div>
+              <div class="col-lg-4 d-flex flex-row-reverse text">
+                Denton, TX
+              </div>
+            </div>
+            <div class="row education-row">
+              <div class="col-lg-6 float-left text">
+                Masters in Advanced Data Analytics
+              </div>
+              <div class="col-lg-6 d-flex flex-row-reverse text">
+                January 2023 - Present
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-2 d-flex justify-content-center">
+            <img src="assets/images/Osmania_University_Logo.png" width="120px" height="100px">
+          </div>
+          <div class="col-lg-10">
+            <div class="row education-row">
+              <div class="col-lg-6">
+                <div class="h3 project-title d-flex justify-content-left">Osmania University</div>
+              </div>
+              <div class="col-lg-6 d-flex flex-row-reverse text">
+                Hyderabad, Telangana, India
+              </div>
+            </div>
+            <div class="row education-row">
+              <div class="col-lg-8 float-left text">
+                Bachelors in Electronics and Communication Engineering
+              </div>
+              <div class="col-lg-4 d-flex flex-row-reverse text">
+                June 2015 - June 2018
+              </div>
+            </div>
+          </div>
+        </div>  
+      </div>
+      
+      <hr>
       <div class="h2 heading">Contact</div>
       <div id="contactform" class="mb-2">
         <div class="mx-auto">
@@ -135,7 +188,7 @@
       </div>
 
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        
+
       </nav>
     </div>
   </div>
