--- a/index.html
+++ b/index.html
@@ -158,9 +158,9 @@
               </div>
             </div>
           </div>
-        </div>  
+        </div>
       </div>
-      
+
       <hr>
       <div class="h2 heading">Contact</div>
       <div id="contactform" class="mb-2">
@@ -187,9 +187,14 @@
         </div>
       </div>
 
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
-      </nav>
+      </nav> -->
+      <footer class="page-footer blue m-auto" style="background-color: black;color: white;height: 60px;" >
+        <div class="m-auto text-center p-3">© 2023 Copyright:
+          <a href="/">Sri Charan Bodduna</a>
+        </div>
+      </footer>
     </div>
   </div>
 </body>
