added MNIST project

--- a/index.html
+++ b/index.html
@@ -83,6 +83,14 @@
         <div class="row">
 
           <div class="col-lg-3">
+            <img src="assets/images/mnist.png" width="250px" height="150px">
+          </div>
+          <div class="col-lg-9">
+            <div class="h3 project-title">Handwritten digits classification using TensorFlow</div>
+            <div class="p text">I have developed a deep learning AI model to classify handwritten numeric digits on MNIST dataset using TensorFlow. I have achieved <b>98.8%</b> accuracy with two layered Convolution Neural Network (CNN).
+            </div>
+          </div>
+          <div class="col-lg-3">
             <img src="assets/images/police_arrests.jpg" width="250px" height="150px">
           </div>
           <div class="col-lg-9">
