added new project

--- a/index.html
+++ b/index.html
@@ -42,12 +42,10 @@
           </div>
           <div class="col-lg-9">
             <div class="display-4 m-2">Sri Charan Bodduna </div>
-            <p class="h2 m-2 heading">Data Scientist</p>
+            <p class="h2 m-2 heading">Data Scientist | Generative AI</p>
             <p class="text m-2">
               I am passionate about exploring data and finding insights using various Machine Learning and data science
-              tools. I am
-              currently
-              building highly efficient models with best solutions in the industry.
+              tools. I am learning Generative AI using open source LLM models. I am building highly efficient models with best solutions in the industry.
             </p>
             <div class="ml-2 pt-3">
               <i class="fa-brands fa-linkedin fa-2xl ml-2 mr-2" style="border-radius: 10px;"></i>
@@ -67,6 +65,7 @@
           capabilities:
           <ul>
             <li>Follows ethical standards of data and AI.</li>
+            <li>Building Generative AI solutions for business use cases & manual tasks</li>
             <li>Flawless models to predict outcomes and improve business.</li>
             <li>Optimizing models to produce results in best way possible.</li>
             <li>Scaling the models and ML design to be data driven and cost-effective features with industry standards.
@@ -90,6 +89,18 @@
             <div class="p text">I have developed a deep learning AI model to classify handwritten numeric digits on MNIST dataset using TensorFlow. I have achieved <b>98.8%</b> accuracy with two layered Convolution Neural Network (CNN).
             </div>
           </div>
+        <div class="row">
+          <div class="col-lg-3">
+            <img src="assets/images/omancar.jpg" width="250px" height="150px">
+          </div>
+          <div class="col-lg-9">
+            <div class="h3 project-title">A	Predictive	Journey	into	Oman	Car	Prices using R language</div>
+            <div class="p text">Built	an	end-to-end	machine	learning	and	 statistical	modeling	 using	R	 language for	predicting	 car	prices,	which	effectively	
+              predicted	car	prices	with	an	accuracy	of	<b>68%</b>	and	a	least	mean	square	error	of	39804156.49.
+            </div>
+          </div>
+        </div>
+        <div class="row">
           <div class="col-lg-3">
             <img src="assets/images/police_arrests.jpg" width="250px" height="150px">
           </div>
@@ -102,10 +113,9 @@
               by city managers to view and strengthen the law and order of the city.
             </div>
           </div>
-
         </div>
-        <div class="w-100"></div>
-        <div class="row"></div>
+        <!-- <div class="w-100"></div>
+        <div class="row"></div> -->
         <div class="row">
 
           <div class="col-lg-3">
@@ -145,7 +155,7 @@
                 Masters in Advanced Data Analytics
               </div>
               <div class="col-lg-6 d-flex flex-row-reverse text">
-                January 2023 - Present
+                January 2023 - December 2024
               </div>
             </div>
           </div>
@@ -206,7 +216,7 @@
 
       </nav> -->
       <footer class="page-footer blue m-auto" style="background-color: black;color: white;height: 60px;">
-        <div class="m-auto text-center p-3">© 2023 Copyright:
+        <div class="m-auto text-center p-3">© 2024 Copyright:
           <a href="/">Sri Charan Bodduna</a>
         </div>
       </footer>
