added experience section

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
           <div class="navbar-nav">
             <a class="nav-item nav-link active" href="#whatIdo">What I do <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link active" href="#projects">Projects</a>
+            <a class="nav-item nav-link active" href="#experience">Experience</a>
             <a class="nav-item nav-link active" href="#education">Education</a>
             <a class="nav-item nav-link active" href="#contactform">Contact</a>
             <a class="nav-item nav-link active" href="assets/resumes/resume.pdf" name="sri-charan-resume">CV</a>
@@ -45,7 +46,8 @@
             <p class="h2 m-2 heading">Data Scientist | Generative AI</p>
             <p class="text m-2">
               I am passionate about exploring data and finding insights using various Machine Learning and data science
-              tools. I am learning Generative AI using open source LLM models. I am building highly efficient models with best solutions in the industry.
+              tools. I am learning Generative AI using open source LLM models. I am building highly efficient models
+              with best solutions in the industry.
             </p>
             <div class="ml-2 pt-3">
               <i class="fa-brands fa-linkedin fa-2xl ml-2 mr-2" style="border-radius: 10px;"></i>
@@ -86,142 +88,205 @@
           </div>
           <div class="col-lg-9">
             <div class="h3 project-title">Handwritten digits classification using TensorFlow</div>
-            <div class="p text">I have developed a deep learning AI model to classify handwritten numeric digits on MNIST dataset using TensorFlow. I have achieved <b>98.8%</b> accuracy with two layered Convolution Neural Network (CNN).
+            <div class="p text">I have developed a deep learning AI model to classify handwritten numeric digits on
+              MNIST dataset using TensorFlow. I have achieved <b>98.8%</b> accuracy with two layered Convolution Neural
+              Network (CNN).
             </div>
           </div>
-        <div class="row">
-          <div class="col-lg-3">
-            <img src="assets/images/omancar.jpg" width="250px" height="150px">
-          </div>
-          <div class="col-lg-9">
-            <div class="h3 project-title">A	Predictive	Journey	into	Oman	Car	Prices using R language</div>
-            <div class="p text">Built	an	end-to-end	machine	learning	and	 statistical	modeling	 using	R	 language for	predicting	 car	prices,	which	effectively	
-              predicted	car	prices	with	an	accuracy	of	<b>68%</b>	and	a	least	mean	square	error	of	39804156.49.
+          <div class="row">
+            <div class="col-lg-3">
+              <img src="assets/images/omancar.jpg" width="250px" height="150px">
+            </div>
+            <div class="col-lg-9">
+              <div class="h3 project-title">A Predictive Journey into Oman Car Prices using R language</div>
+              <div class="p text">Built an end-to-end machine learning and statistical modeling using R language for
+                predicting car prices, which effectively
+                predicted car prices with an accuracy of <b>68%</b> and a least mean square error of 39804156.49.
+              </div>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-3">
-            <img src="assets/images/police_arrests.jpg" width="250px" height="150px">
-          </div>
-          <div class="col-lg-9">
-            <div class="h3 project-title">Dallas Crime Analysis Reporting using Tableau</div>
-            <div class="p text">I have developed a eye catching data visualization on city of Dallas police arrests. I
-              have
-              found many insights about arrests patterns and frequency of arrests in the city. These outcomes can be
-              used
-              by city managers to view and strengthen the law and order of the city.
+          <div class="row">
+            <div class="col-lg-3">
+              <img src="assets/images/police_arrests.jpg" width="250px" height="150px">
+            </div>
+            <div class="col-lg-9">
+              <div class="h3 project-title">Dallas Crime Analysis Reporting using Tableau</div>
+              <div class="p text">I have developed a eye catching data visualization on city of Dallas police arrests. I
+                have
+                found many insights about arrests patterns and frequency of arrests in the city. These outcomes can be
+                used
+                by city managers to view and strengthen the law and order of the city. <a href="https://public.tableau.com/app/profile/sri.charan.bodduna/viz/DallasPoliceArrestsDashboard/PoliceArrestsAnalysisReport2" style="font-size: 0.8em; font-style: italic;">view on Tableau Public</a> 
+              </div>
             </div>
           </div>
-        </div>
-        <!-- <div class="w-100"></div>
+          <!-- <div class="w-100"></div>
         <div class="row"></div> -->
-        <div class="row">
+          <div class="row">
 
-          <div class="col-lg-3">
-            <img src="assets/images/heart-attack-prediction.jpg" width="250px" height="150px">
-          </div>
-          <div class="col-lg-9">
-            <div class="h3 project-title">Heart Attack Prediction System using Decision Tree Algorithm</div>
-            <div class="p text">
-              I have built the predictive ML model which can predict whether a patient have chance getting heart attack.
-              Doctors and research analysts can use this model as precautionary measures for their patient and provide
-              appropriate treatments and actions.
+            <div class="col-lg-3">
+              <img src="assets/images/heart-attack-prediction.jpg" width="250px" height="150px">
             </div>
-          </div>
-
-        </div>
-        <!-- <div class="w-100"></div> -->
-      </div>
-
-      <hr>
-      <div id="education" class="m-2">
-        <div class="h2 heading">Education</div>
-        <div class="row">
-          <div class="col-lg-2 d-flex justify-content-center">
-            <img src="assets/images/unt_logo.png" width="100px" height="100px">
-          </div>
-          <div class="col-lg-10">
-            <div class="row education-row">
-              <div class="col-lg-8">
-                <div class="h3 project-title d-flex justify-content-left">University of North Texas</div>
+            <div class="col-lg-9">
+              <div class="h3 project-title">Heart Attack Prediction System using Decision Tree Algorithm</div>
+              <div class="p text">
+                I have built the predictive ML model which can predict whether a patient have chance getting heart
+                attack.
+                Doctors and research analysts can use this model as precautionary measures for their patient and provide
+                appropriate treatments and actions.
               </div>
-              <div class="col-lg-4 d-flex flex-row-reverse text">
+            </div>
+
+          </div>
+          <!-- <div class="w-100"></div> -->
+        </div>
+
+        <hr>
+        <div id="experience" class="m-2">
+          <div class="h2 heading">Work Experience</div>
+          <div class="row">
+            <div class="col-lg-2 d-flex justify-content-center">
+              <img src="assets/images/vodafoneicon.png" width="100px" height="100px">
+            </div>
+            <div class="col-lg-10">
+              <div class="row education-row">
+                <div class="col-lg-8">
+                  <div class="h3 project-title d-flex justify-content-left">Vodafone Intelligent Solutions (_VOIS)</div>
+                </div>
+                <!-- <div class="col-lg-4 d-flex flex-row-reverse text">
                 Denton, TX
+              </div> -->
               </div>
-            </div>
-            <div class="row education-row">
-              <div class="col-lg-6 float-left text">
-                Masters in Advanced Data Analytics
-              </div>
-              <div class="col-lg-6 d-flex flex-row-reverse text">
-                January 2023 - December 2024
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-2 d-flex justify-content-center">
-            <img src="assets/images/Osmania_University_Logo.png" width="120px" height="100px">
-          </div>
-          <div class="col-lg-10">
-            <div class="row education-row">
-              <div class="col-lg-6">
-                <div class="h3 project-title d-flex justify-content-left">Osmania University</div>
-              </div>
-              <div class="col-lg-6 d-flex flex-row-reverse text">
-                Hyderabad, Telangana, India
-              </div>
-            </div>
-            <div class="row education-row">
-              <div class="col-lg-8 float-left text">
-                Bachelors in Electronics and Communication Engineering
-              </div>
-              <div class="col-lg-4 d-flex flex-row-reverse text">
-                June 2015 - June 2018
+              <div class="row education-row">
+                <div class="col-lg-12 text">
+                  Served as an Alteryx admin & developer, supervising 5 servers and 600+ workflows under Vodafone
+                  Group, assisting the
+                  company in adapting new ETL pipelines. Administered users, workflows, collections, and DBMS data
+                  connections on servers.
+                  <br>
+                  Engineered and delivered TensorFlow deep learning models and time-series analysis for profits
+                  forecasting, resulting in a 25%
+                  increase in forecasting accuracy and projected 12% increase in profit growth margin.
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-
-      <hr>
-      <div class="h2 heading">Contact</div>
-      <div id="contactform" class="mb-2">
-        <div class="mx-auto">
-          <form action="https://formsubmit.co/sricharan0246+pws@gmail.com" method="POST">
-            <input type="hidden" name="_captcha" value="false">
-            <div class="form-group">
-              <label for="cf-name" class="text">Name</label>
-              <input type="text" class="form-control" id="cf-name" name="name" placeholder="John Doe" required>
+          <div class="row">
+            <div class="col-lg-2 d-flex justify-content-center">
+              <img src="assets/images/infosysicon.jpeg" width="100px" height="100px">
+            </div>
+            <div class="col-lg-10">
+              <div class="row education-row">
+                <div class="col-lg-8">
+                  <div class="h3 project-title d-flex justify-content-left">Infosys Ltd.</div>
+                </div>
+                <!-- <div class="col-lg-4 d-flex flex-row-reverse text">
+                Denton, TX
+              </div> -->
+              </div>
+              <div class="row education-row">
+                <div class="col-lg-12 text">
+                  Designed a Data Quality application using Alteryx and Python (spaCy) for HSBC, that assesses
+                  completeness, consistency,
+                  validity, and conformity, resulting in 92% time savings in data management and pipeline processing by
+                  automating the app.<br>
+                  Optimized the application measuring data quality for 10 million rows and 500+ columns using Alteryx
+                  and its server capabilities,
+                  by reducing execution time by 96%, leading to significant savings in business hours and enhanced
+                  operational efficiency.
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+          <hr>
+          <div id="education" class="m-2">
+            <div class="h2 heading">Education</div>
+            <div class="row">
+              <div class="col-lg-2 d-flex justify-content-center">
+                <img src="assets/images/unt_logo.png" width="100px" height="100px">
+              </div>
+              <div class="col-lg-10">
+                <div class="row education-row">
+                  <div class="col-lg-8">
+                    <div class="h3 project-title d-flex justify-content-left">University of North Texas</div>
+                  </div>
+                  <div class="col-lg-4 d-flex flex-row-reverse text">
+                    Denton, TX
+                  </div>
+                </div>
+                <div class="row education-row">
+                  <div class="col-lg-6 float-left text">
+                    Masters in Advanced Data Analytics
+                  </div>
+                  <div class="col-lg-6 d-flex flex-row-reverse text">
+                    January 2023 - December 2024
+                  </div>
+                </div>
+              </div>
             </div>
 
-            <div class="form-group">
-              <label for="cf-email" class="text">Email address</label>
-              <input type="email" class="form-control" id="cf-email" name="email" placeholder="johnd@example.com"
-                required>
+            <div class="row">
+              <div class="col-lg-2 d-flex justify-content-center">
+                <img src="assets/images/Osmania_University_Logo.png" width="120px" height="100px">
+              </div>
+              <div class="col-lg-10">
+                <div class="row education-row">
+                  <div class="col-lg-6">
+                    <div class="h3 project-title d-flex justify-content-left">Osmania University</div>
+                  </div>
+                  <div class="col-lg-6 d-flex flex-row-reverse text">
+                    Hyderabad, Telangana, India
+                  </div>
+                </div>
+                <div class="row education-row">
+                  <div class="col-lg-8 float-left text">
+                    Bachelors in Electronics and Communication Engineering
+                  </div>
+                  <div class="col-lg-4 d-flex flex-row-reverse text">
+                    June 2015 - June 2018
+                  </div>
+                </div>
+              </div>
             </div>
+          </div>
 
-            <div class="form-group">
-              <label for="cf-msg" class="text">Message</label>
-              <textarea class="form-control" id="cf-msg" name="message" rows="3"></textarea>
+          <hr>
+          <div class="h2 heading">Contact</div>
+          <div id="contactform" class="mb-2">
+            <div class="mx-auto">
+              <form action="https://formsubmit.co/sricharan0246+pws@gmail.com" method="POST">
+                <input type="hidden" name="_captcha" value="false">
+                <div class="form-group">
+                  <label for="cf-name" class="text">Name</label>
+                  <input type="text" class="form-control" id="cf-name" name="name" placeholder="John Doe" required>
+                </div>
+
+                <div class="form-group">
+                  <label for="cf-email" class="text">Email address</label>
+                  <input type="email" class="form-control" id="cf-email" name="email" placeholder="johnd@example.com"
+                    required>
+                </div>
+
+                <div class="form-group">
+                  <label for="cf-msg" class="text">Message</label>
+                  <textarea class="form-control" id="cf-msg" name="message" rows="3"></textarea>
+                </div>
+                <button type="submit" class="btn btn-info">Send Message</button>
+              </form>
             </div>
-            <button type="submit" class="btn btn-info">Send Message</button>
-          </form>
-        </div>
-      </div>
+          </div>
 
-      <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+          <!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 
       </nav> -->
-      <footer class="page-footer blue m-auto" style="background-color: black;color: white;height: 60px;">
-        <div class="m-auto text-center p-3">© 2024 Copyright:
-          <a href="/">Sri Charan Bodduna</a>
+          <footer class="page-footer blue m-auto" style="background-color: black;color: white;height: 60px;">
+            <div class="m-auto text-center p-3">© 2024 Copyright:
+              <a href="/">Sri Charan Bodduna</a>
+            </div>
+          </footer>
         </div>
-      </footer>
-    </div>
-  </div>
+      </div>
 </body>
 
 </html>
