--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </div>
           <div class="col-lg-9">
             <div class="display-4 m-2">Sri Charan Bodduna </div>
-            <p class="h2 m-2 heading">Data Scientist | Generative AI</p>
+            <p class="h2 m-2 heading">Data Scientist | Generative AI Learner</p>
             <p class="text m-2">
               I am passionate about exploring data and finding insights using various Machine Learning and data science
               tools. I am learning Generative AI using open source LLM models. I am building highly efficient models
@@ -63,8 +63,7 @@
       <hr>
       <div id="whatIdo" class="m-2">
         <div class="h2 heading">What I do</div>
-        <div class="text">I love artificial Intelligence. I am creating and optimizing AI models which have below
-          capabilities:
+        <div class="text">I love artificial Intelligence. I am creating and optimizing AI models in following ways:
           <ul>
             <li>Follows ethical standards of data and AI.</li>
             <li>Building Generative AI solutions for business use cases & manual tasks</li>
