added privacy policy

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
 
       </nav> -->
           <footer class="page-footer blue m-auto" style="background-color: black;color: white;height: 60px;">
-            <div class="m-auto text-center p-3">© 2024 Copyright:
+            <div class="m-auto text-center p-3"><span><a href="privacypolicy.html">Privacy Policy</a></span> © 2024 Copyright:
               <a href="/">Sri Charan Bodduna</a>
             </div>
           </footer>
