added google analytics

--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="assets\style.css">
   <script src="https://kit.fontawesome.com/febd6a1905.js" crossorigin="anonymous"></script>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-8D024LL4FG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-8D024LL4FG');
+  </script>
 </head>
 
 <body>
@@ -114,7 +123,9 @@
                 have
                 found many insights about arrests patterns and frequency of arrests in the city. These outcomes can be
                 used
-                by city managers to view and strengthen the law and order of the city. <a href="https://public.tableau.com/app/profile/sri.charan.bodduna/viz/DallasPoliceArrestsDashboard/PoliceArrestsAnalysisReport2" style="font-size: 0.8em; font-style: italic;">view on Tableau Public</a> 
+                by city managers to view and strengthen the law and order of the city. <a
+                  href="https://public.tableau.com/app/profile/sri.charan.bodduna/viz/DallasPoliceArrestsDashboard/PoliceArrestsAnalysisReport2"
+                  style="font-size: 0.8em; font-style: italic;">view on Tableau Public</a>
               </div>
             </div>
           </div>
@@ -280,7 +291,8 @@
 
       </nav> -->
           <footer class="page-footer blue m-auto" style="background-color: black;color: white;height: 60px;">
-            <div class="m-auto text-center p-3"><span><a href="privacypolicy.html">Privacy Policy</a></span> © 2024 Copyright:
+            <div class="m-auto text-center p-3"><span><a href="privacypolicy.html">Privacy Policy</a></span> © 2024
+              Copyright:
               <a href="/">Sri Charan Bodduna</a>
             </div>
           </footer>
