added github links for all projects

--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
             </div>
             <div class="col-lg-9">
               <div class="h3 project-title">JobBuddy.ai LLM application using Google Gemini</div>
-
+              <span><a class="btn btn-link my-hyperlinks"
+                  href="https://github.com/sricharan245/Gemini-Projects/tree/9fd92137fe1f3d9b1dd3787d3ce3dcfdd177682a/Jobs-Buddy-ai">GitHub
+                  Link</a></span>
+              <!-- <i class="fa-solid fa-link link-icon"></i> -->
               <div class="p text text-justify">
                 Developed an LLM application that can act as friend during job search. The application is capable of
                 resulting key words matching score between resume and job description. Other capabilities include
@@ -114,6 +117,9 @@
             </div>
             <div class="col-lg-9">
               <div class="h3 project-title">Handwritten digits classification using TensorFlow</div>
+              <span><a class="btn btn-link my-hyperlinks"
+                  href="https://github.com/sricharan245/handwritten-digits-classification">GitHub
+                  Link</a></span>
               <div class="p text text-justify">Implemented a deep learning AI model to classify handwritten numeric
                 digits
                 on
@@ -128,6 +134,9 @@
             </div>
             <div class="col-lg-9">
               <div class="h3 project-title">A Predictive Journey into Oman Car Prices using R language</div>
+              <span><a class="btn btn-link my-hyperlinks"
+                  href="https://github.com/sricharan245/R-projects/tree/2d51b5f4ba8cc3a3c21cbe7664c0e9987572730a/Oman%20Car%20Price%20Prediction">GitHub
+                  Link</a></span>
               <div class="p text text-justify">Built an end-to-end machine learning and statistical modeling using R
                 language for
                 predicting car prices, which effectively
@@ -141,6 +150,9 @@
             </div>
             <div class="col-lg-9">
               <div class="h3 project-title">Dallas Crime Analysis Reporting using Tableau</div>
+              <span><a class="btn btn-link my-hyperlinks"
+                  href="https://github.com/sricharan245/dallas-police-arrests-dashboard">GitHub
+                  Link</a></span>
               <div class="p text text-justify">Developed a eye catching data visualization on city of Dallas police
                 arrests. I
                 have
@@ -161,6 +173,9 @@
             </div>
             <div class="col-lg-9">
               <div class="h3 project-title">Heart Attack Prediction System using Decision Tree Algorithm</div>
+              <span><a class="btn btn-link my-hyperlinks"
+                href="https://github.com/sricharan245/python-developments/tree/8c4ad3a1de9c84d3352abc4b647d6e45e80d98b2/heartattack_prediction">GitHub
+                Link</a></span>
               <div class="p text text-justify ">
                 Built the predictive ML model which can predict whether a patient have chance getting heart
                 attack.
