--- a/index.html
+++ b/index.html
@@ -346,9 +346,10 @@
 
       </nav> -->
           <footer class="page-footer blue m-auto" style="background-color: black;color: white;height: 60px;">
-            <div class="m-auto text-center p-3"><span><a href="privacypolicy.html">Privacy Policy</a></span> © 2024
+            <div class="m-auto text-center p-3"><span><a href="privacypolicy.html">Privacy Policy</a> | </span> © 2024
               Copyright:
-              <a href="/">Sri Charan Bodduna</a>
+              <a href="/">Sri Charan Bodduna</a> | 
+              <span>Last updated on 08/15/2024</span>
             </div>
           </footer>
         </div>
